--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,13 +5,14 @@
   padding: 0;
 }
 
+/* Altura total para html e body */
+html, body {
+  height: 100%;
+   overflow-x: hidden;
+}
+
 /* Configurações globais */
 body {
-  margin: 0;
   font-family: 'Montserrat', sans-serif;  /* Fonte global */
   background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
