--- a/frontend/src/css/Biblioteca.css
+++ b/frontend/src/css/Biblioteca.css
@@ -1,20 +1,7 @@
 .livros-galeria {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* 5 colunas iguais */
-  gap: 20px; /* espaçamento entre cards */
-  padding: 10px 0;
-}
-
-.livro-card {
-  background-color: #f8f8f8;
-  border-radius: 8px;
-  cursor: pointer;
-  overflow: hidden;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
-  display: flex;
-  flex-direction: column;
-  height: 300px;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 20px;
 }
 
 .livro-card:hover {
@@ -54,4 +41,7 @@
 
 .status-quero-ler {
   background-color: #61bffe;
+}
+.status-abandonado {
+  background-color: #000000;
 }
