--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #251a0b;
-  color: #f5f5f5;
+  background-color: var(--cor-texto-principal); /* antes #251a0b */
+  color: var(--cor-fundo); /* antes #f5f5f5 */
   text-align: center;
   padding: 12px 0;
   position: relative;
