--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,51 @@
-/* Reseta margens e paddings de todos os elementos */
+/* Importação da fonte */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+/* Variáveis globais de cor */
+:root {
+  --cor-principal: #251a0b;          
+  --cor-secundaria: #734590;        
+  --cor-texto-principal: #f5f5f5;   
+  --cor-fundo: #ffffff;              
+  --cor-texto-secundario: #666666;  
+  --cor-hover-secundaria: #9335b0;  
+  --cor-placeholder: #666666;       
+  --cor-borda-foco: #2575fc;        
+  --cor-descricao-suave: #e0d0f5;   
+  --cor-overlay-preto: rgba(0, 0, 0, 0.6);  
+  --cor-overlay-preto-suave: rgba(0, 0, 0, 0.5); 
+  --cor-fundo-transparente: rgba(55, 13, 79, 0.634); 
+  --cor-sombra: rgba(0, 0, 0, 0.4); 
+   --cor-fundo-claro: #f7f7f7;
+  --cor-texto-secundario: #666666;
+  --cor-principal-hover: #3b2a15;
+}
+
+/* Reset e configurações globais */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* Altura total para html e body */
 html, body {
   height: 100%;
-   overflow-x: hidden;
+  overflow-x: hidden;
 }
 
-/* Configurações globais */
 body {
-  font-family: 'Montserrat', sans-serif;  /* Fonte global */
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--cor-fundo);
+  color: var(--cor-texto-principal);
+}
+
+/* Elementos gerais */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
 }
